http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.21
  Update PCRE to version 8.10
  Update SCEW to version 1.1.2
  Improve startup time (#2788142)
  Add menuitems for selecting automatic or manual prediffing (#2638608)
  Add accelerator keys for Shell context menu (#2823536)
  Improve editing of linefilter regular expressions (#3015416)
  Bugfix: Untranslated string ("Merge.rc:nnnn") was displayed 
    in status bar (#3025855)

WinMerge 2.13.20 - 2010-10-20 (r7319)
  Add missing keywords to Pascal highlighter (#2834192)
  Recognize .ascx files as ASP files (#3042393)
  Fix help locations (#2988974)
  Show only "Copy to other side" item in file compare
    context menu (#2600787)
  Expand/collapse folders from keyboard (#2203904)
  Improve detecting XML files in file compare (#2726531)
  Initialize folder selection dialog to currently selected folder in
    options dialog (r6570)
  New translation: Persian (#2877121, #3065119)
  New translation: Serbian (#3017674, #3065119)
  Installer: Drop Windows 9x/ME/NT4 support and use Microsoft runtime
    libraries installer (#3070254)
  Installer: Remove Uninstall shortcut from start menu folder (#3076909)
  Installer: Don't install quick launch icon for Windows 7 (#3079966)
  Installer: Add OpenCandy to the InnoSetup installer (#3088720)
  Bugfix: WinMerge was vulnerable to DLL hijacking as described in
    Microsoft Security Advisory (2269637)  (#33056008)
  Bugfix: Location pane focus enabled "Save" (#3022292)
  Bugfix: "Copy and advance" toolbar icons not automatically enabled (#3033325)
  Translation updates:
  - Bulgarian (#3082392)
  - Chinese (#3033324)
  - Dutch (#2804979)
  - French (#2850842, #2968200)
  - Slovenian (#2917796, #2932094, #2934354, #3070136)
  - Spanish (#2930734)
  - Turkish (#2825132, #2827817)
  - Ukrainian (#2817835)

WinMerge 2.12.4 - 2009-06-09 (r6833)
  Add more C/C++ types to syntax highlight (#2776705)
  Create config log file to My Documents-folder (#2789839)