@@ -10,6 +10,7 @@ WinMerge 2.13.21
   Add menuitems for selecting automatic or manual prediffing (#2638608)
   Add accelerator keys for Shell context menu (#2823536)
   Improve editing of linefilter regular expressions (#3015416)
+  Allow editing context line count in patch creator (#2092180)
   Bugfix: Untranslated string ("Merge.rc:nnnn") was displayed 
     in status bar (#3025855)
 
